Oops: Fixed handling touch events on mobile devices + Styled Dark Mode button on mobile devices.

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  // cursor: none !important;
+  cursor: none !important;
 }
 
 html, body {
